<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metal_bg" >
    
    <ImageView 
        android:id="@+id/ivMenuLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="15dip"
        android:layout_marginTop="30dip"
        android:src="@drawable/menu_logo"
        android:contentDescription="@string/menu_iv_logo_desc"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dip"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        
        <Button 
        android:id="@+id/btnMenuPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:background="@drawable/btn_bg"
        android:text="@string/menu_btn_play_desc"
        android:textColor="@color/btn_txt_blue"
        android:onClick="onClickPlay"/>
        
        <Button 
            android:id="@+id/btnMenuScoreboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
        	android:layout_marginBottom="10dip"
            android:background="@drawable/btn_bg"
            android:text="@string/menu_btn_scoreboard_desc"
            android:textColor="@color/btn_txt_blue"
            android:onClick="onClickScoreboard"/>
        
        <Button 
            android:id="@+id/btnMenuHelp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
        	android:layout_marginBottom="10dip"
            android:background="@drawable/btn_bg"
            android:text="@string/menu_btn_help_desc"
            android:textColor="@color/btn_txt_blue"
            android:onClick="onClickHelp"/>
        
        <Button 
            android:id="@+id/btnMenuExit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/btn_bg"
            android:text="@string/menu_btn_exit_desc"
            android:textColor="@color/btn_txt_blue"
            android:onClick="onClickExit"/>
        
    </LinearLayout>

</RelativeLayout>